--- a/lessons/index.html
+++ b/lessons/index.html
@@ -10,9 +10,50 @@
 
 <body>
 
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header class="header container">
+        <div class="header_left">
+            <h1 class="header_h1">Product name</h1>
+            <ul class="header_list">
+                <li>Put on this page information about your product </li>
+                <li>A detailed description of your product</li>
+                <li>Tell us about the advantages and merits</li>
+                <li>Associate the page with the payment system</li>
+            </ul>
+        </div>
+        <div class="header_right">
+            <div class="image_container">
+                <img src="images/logo.jpg" alt="logo">
+            </div>
+        </div>
+    </header>
+
+    <main class="container">
+
+        <section class="aboute">
+            <div class="aboute_left">
+                <h2 class="aboute_h2">About your product</h2>
+                <p class="aboute_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga,
+                    illo at. Natus eos,
+                    eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
+                <p class="aboute_text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel
+                    exercitationem ullam quos
+                    aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis
+                    dolor.</p>
+            </div>
+            <div class="aboute_right">
+                <div class="image_container">
+                    <img src="images/aboute_image.jpg" alt="aboute image">
+                </div>
+            </div>
+        </section>
+
+        <section class="Dignity_product">
+        </section>
+
+    </main>
+
+    <footer>
+    </footer>
 
 </body>
 
