Add dir template

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lessons</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         </div>
         <div class="header_right">
             <div class="image_container">
-                <img src="images/logo.jpg" alt="logo">
+                <img src="img/logo.jpg" alt="logo">
             </div>
         </div>
     </header>
