add pluses bases

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -11,43 +11,56 @@
 <body>
 
     <header class="header container">
-        <div class="header_left">
+        <div class="header_wraper">
             <h1 class="header_h1">Product name</h1>
             <ul class="header_list">
-                <li>Put on this page information about your product </li>
-                <li>A detailed description of your product</li>
-                <li>Tell us about the advantages and merits</li>
-                <li>Associate the page with the payment system</li>
+                <li class="header_list_item">Put on this page information about your product </li>
+                <li class="header_list_item">A detailed description of your product</li>
+                <li class="header_list_item">Tell us about the advantages and merits</li>
+                <li class="header_list_item">Associate the page with the payment system</li>
             </ul>
         </div>
-        <div class="header_right">
-            <div class="image_container">
-                <img src="img/logo.jpg" alt="logo">
-            </div>
-        </div>
+        <img class='header_img' src="img/logo.png" alt="logo">
     </header>
 
     <main class="container">
 
-        <section class="aboute">
-            <div class="aboute_left">
-                <h2 class="aboute_h2">About your product</h2>
-                <p class="aboute_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga,
+        <section class="about">
+            <div class="about_wraper">
+                <h2 class="about_h2">About your product</h2>
+                <p class="about_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga,
                     illo at. Natus eos,
                     eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
-                <p class="aboute_text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel
+                <p class="about_text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel
                     exercitationem ullam quos
                     aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis
                     dolor.</p>
             </div>
-            <div class="aboute_right">
-                <div class="image_container">
-                    <img src="images/aboute_image.jpg" alt="aboute image">
-                </div>
-            </div>
+            <img class='about_clip' src="img/video.png" alt="about image">
         </section>
 
-        <section class="Dignity_product">
+        <section class="dignity_product container">
+            <h2 class="dignity_product_h2">Dignity and pluses product</h2>
+            <ul class="dignity_product_list">
+                <li class="dignity_product_list_item">Delectus dolorem vero quae beatae quasi dolor deserunt iste amet
+                    atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas,
+                    maxime, quaerat porro totam, dolore minus inventore.</li>
+                <li class="dignity_product_list_item">Delectus dolorem vero quae beatae quasi dolor deserunt iste amet
+                    atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas,
+                    maxime, quaerat porro totam, dolore minus inventore.</li>
+                <li class="dignity_product_list_item">Delectus dolorem vero quae beatae quasi dolor deserunt iste amet
+                    atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas,
+                    maxime, quaerat porro totam, dolore minus inventore.</li>
+                <li class="dignity_product_list_item">Delectus dolorem vero quae beatae quasi dolor deserunt iste amet
+                    atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas,
+                    maxime, quaerat porro totam, dolore minus inventore.</li>
+                <li class="dignity_product_list_item">Delectus dolorem vero quae beatae quasi dolor deserunt iste amet
+                    atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas,
+                    maxime, quaerat porro totam, dolore minus inventore.</li>
+                <li class="dignity_product_list_item">Delectus dolorem vero quae beatae quasi dolor deserunt iste amet
+                    atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas,
+                    maxime, quaerat porro totam, dolore minus inventore.</li>
+            </ul>
         </section>
 
     </main>
