Добавил пару блоков.
На все сил не хватило :(

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -27,7 +27,7 @@
 
         <section class="about">
             <div class="about_wraper">
-                <h2 class="about_h2">About your product</h2>
+                <h2 class="about_header">About your product</h2>
                 <p class="about_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga,
                     illo at. Natus eos,
                     eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
@@ -60,6 +60,90 @@
                 <li class="dignity_product_list_item">Delectus dolorem vero quae beatae quasi dolor deserunt iste amet
                     atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas,
                     maxime, quaerat porro totam, dolore minus inventore.</li>
+            </ul>
+        </section>
+
+        <section class="screenshots container">
+            <h2 class="screenshots_header">Screenshots</h2>
+            <ul class='screenshots_list'>
+                <li class="screenshots_list_item">
+                    <img src="./img/screenshots/s0.png" alt="screenshot" class="screenshots_list_item_img">
+                    <div class="screenshots_list_item_wraper">
+                        <h3 class="screenshots_list_item_header">The description for the image</h3>
+                        <p class="screenshots_list_item_text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque
+                            itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi
+                            dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
+                    </div>
+                </li>
+                <li class="screenshots_list_item">
+                    <img src="./img/screenshots/s0.png" alt="screenshot" class="screenshots_list_item_img">
+                    <div class="screenshots_list_item_wraper">
+                        <h3 class="screenshots_list_item_header">The description for the image</h3>
+                        <p class="screenshots_list_item_text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque
+                            itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi
+                            dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
+                    </div>
+                </li>
+                <li class="screenshots_list_item">
+                    <img src="./img/screenshots/s0.png" alt="screenshot" class="screenshots_list_item_img">
+                    <div class="screenshots_list_item_wraper">
+                        <h3 class="screenshots_list_item_header">The description for the image</h3>
+                        <p class="screenshots_list_item_text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque
+                            itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi
+                            dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
+                    </div>
+                </li>
+                <li class="screenshots_list_item">
+                    <img src="./img/screenshots/s0.png" alt="screenshot" class="screenshots_list_item_img">
+                    <div class="screenshots_list_item_wraper">
+                        <h3 class="screenshots_list_item_header">The description for the image</h3>
+                        <p class="screenshots_list_item_text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque
+                            itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi
+                            dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
+                    </div>
+                </li>
+            </ul>
+        </section>
+
+        <section class="reviews">
+            <h2 class="reviews_header">Reviews</h2>
+            <ul class="reviews_list">
+                <li class="reviews_list_item">
+                    <img src="" alt="avatar" class="revies_list_item_avatar">
+                    <blockquote class="reviews_list_item_quote">
+                        <p class="reviews_list_item_quote_text">Porro officia cumque sint deleniti nemo facere rem vitae
+                            odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit.
+                            Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
+                        <span class="reviews_list_item_quote_autor">Lourens S.</span>
+                    </blockquote>
+                </li>
+                <li class="reviews_list_item">
+                    <img src="" alt="avatar" class="revies_list_item_avatar">
+                    <blockquote class="reviews_list_item_quote">
+                        <p class="reviews_list_item_quote_text">Porro officia cumque sint deleniti nemo facere rem vitae
+                            odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit.
+                            Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
+                        <span class="reviews_list_item_quote_autor">Lourens S.</span>
+                    </blockquote>
+                </li>
+                <li class="reviews_list_item">
+                    <img src="" alt="avatar" class="revies_list_item_avatar">
+                    <blockquote class="reviews_list_item_quote">
+                        <p class="reviews_list_item_quote_text">Porro officia cumque sint deleniti nemo facere rem vitae
+                            odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit.
+                            Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
+                        <span class="reviews_list_item_quote_autor">Lourens S.</span>
+                    </blockquote>
+                </li>
+                <li class="reviews_list_item">
+                    <img src="" alt="avatar" class="revies_list_item_avatar">
+                    <blockquote class="reviews_list_item_quote">
+                        <p class="reviews_list_item_quote_text">Porro officia cumque sint deleniti nemo facere rem vitae
+                            odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit.
+                            Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
+                        <span class="reviews_list_item_quote_autor">Lourens S.</span>
+                    </blockquote>
+                </li>
             </ul>
         </section>
 
