--- a/lessons/index.html
+++ b/lessons/index.html
@@ -42,9 +42,12 @@
         <section class="dignity_product container">
             <h2 class="dignity_product_h2">Dignity and pluses product</h2>
             <ul class="dignity_product_list">
-                <li class="dignity_product_list_item">Delectus dolorem vero quae beatae quasi dolor deserunt iste amet
-                    atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas,
-                    maxime, quaerat porro totam, dolore minus inventore.</li>
+                <li class="dignity_product_list_item">
+                    Delectus dolorem vero quae beatae quasi dolor deserunt iste amet
+                    atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis
+                    quas,
+                    maxime, quaerat porro totam, dolore minus inventore.
+                </li>
                 <li class="dignity_product_list_item">Delectus dolorem vero quae beatae quasi dolor deserunt iste amet
                     atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas,
                     maxime, quaerat porro totam, dolore minus inventore.</li>
