--- a/lessons/index.html
+++ b/lessons/index.html
@@ -12,7 +12,7 @@
 
     <header class="header container">
         <div class="header_wraper">
-            <h1 class="header_h1">Product name</h1>
+            <h1 class="header_title">Product name</h1>
             <ul class="header_list">
                 <li class="header_list_item">Put on this page information about your product </li>
                 <li class="header_list_item">A detailed description of your product</li>
@@ -20,14 +20,14 @@
                 <li class="header_list_item">Associate the page with the payment system</li>
             </ul>
         </div>
-        <img class='header_img' src="img/logo.png" alt="logo">
+        <img class='header_img' src="https://via.placeholder.com/470x215" alt="logo" height="215">
     </header>
 
     <main class="container">
 
         <section class="about">
             <div class="about_wraper">
-                <h2 class="about_header">About your product</h2>
+                <h2 class="about_title">About your product</h2>
                 <p class="about_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga,
                     illo at. Natus eos,
                     eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
@@ -36,11 +36,11 @@
                     aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis
                     dolor.</p>
             </div>
-            <img class='about_clip' src="img/video.png" alt="about image">
+            <img class='about_clip' src="https://via.placeholder.com/430x245" height="245" alt="about image">
         </section>
 
         <section class="dignity_product container">
-            <h2 class="dignity_product_h2">Dignity and pluses product</h2>
+            <h2 class="dignity_product_title">Dignity and pluses product</h2>
             <ul class="dignity_product_list">
                 <li class="dignity_product_list_item">
                     Delectus dolorem vero quae beatae quasi dolor deserunt iste amet
@@ -67,41 +67,47 @@
         </section>
 
         <section class="screenshots container">
-            <h2 class="screenshots_header">Screenshots</h2>
+            <h2 class="screenshots_title">Screenshots</h2>
             <ul class='screenshots_list'>
                 <li class="screenshots_list_item">
-                    <img src="./img/screenshots/s0.png" alt="screenshot" class="screenshots_list_item_img">
+                    <img src="https://via.placeholder.com/200x150" height="150" alt="screenshot"
+                        class="screenshots_list_item_img">
                     <div class="screenshots_list_item_wraper">
-                        <h3 class="screenshots_list_item_header">The description for the image</h3>
+                        <h3 class="screenshots_list_item_title">The description for the image</h3>
                         <p class="screenshots_list_item_text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque
                             itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi
                             dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
                     </div>
                 </li>
                 <li class="screenshots_list_item">
-                    <img src="./img/screenshots/s0.png" alt="screenshot" class="screenshots_list_item_img">
+                    <img src="https://via.placeholder.com/200x150" height="150" alt="screenshot"
+                        class="screenshots_list_item_img">
                     <div class="screenshots_list_item_wraper">
-                        <h3 class="screenshots_list_item_header">The description for the image</h3>
+                        <h3 class="screenshots_list_item_title">The description for the image</h3>
                         <p class="screenshots_list_item_text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque
                             itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi
                             dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
                     </div>
                 </li>
                 <li class="screenshots_list_item">
-                    <img src="./img/screenshots/s0.png" alt="screenshot" class="screenshots_list_item_img">
+                    <img src="https://via.placeholder.com/200x150" height="150" alt="screenshot"
+                        class="screenshots_list_item_img">
                     <div class="screenshots_list_item_wraper">
-                        <h3 class="screenshots_list_item_header">The description for the image</h3>
+                        <h3 class="screenshots_list_item_title">The description for the image</h3>
                         <p class="screenshots_list_item_text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque
                             itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi
                             dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
                     </div>
                 </li>
                 <li class="screenshots_list_item">
-                    <img src="./img/screenshots/s0.png" alt="screenshot" class="screenshots_list_item_img">
+                    <img src="https://via.placeholder.com/200x150" height="150" alt="screenshot"
+                        class="screenshots_list_item_img">
                     <div class="screenshots_list_item_wraper">
-                        <h3 class="screenshots_list_item_header">The description for the image</h3>
-                        <p class="screenshots_list_item_text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque
-                            itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi
+                        <h3 class="screenshots_list_item_title">The description for the image</h3>
+                        <p class="screenshots_list_item_text">Pariatur iure ab sunt nesciunt, quibusdam odio iste
+                            cumque
+                            itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam
+                            animi
                             dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
                     </div>
                 </li>
@@ -109,7 +115,7 @@
         </section>
 
         <section class="reviews">
-            <h2 class="reviews_header">Reviews</h2>
+            <h2 class="reviews_title">Reviews</h2>
             <ul class="reviews_list">
                 <li class="reviews_list_item">
                     <img src="" alt="avatar" class="revies_list_item_avatar">
