--- a/lessons/index.html
+++ b/lessons/index.html
@@ -118,7 +118,7 @@
             <h2 class="reviews_title">Reviews</h2>
             <ul class="reviews_list">
                 <li class="reviews_list_item">
-                    <img src="" alt="avatar" class="revies_list_item_avatar">
+                    <img src="https://via.placeholder.com/75" alt="avatar" height="75" class="reviews_list_item_avatar">
                     <blockquote class="reviews_list_item_quote">
                         <p class="reviews_list_item_quote_text">Porro officia cumque sint deleniti nemo facere rem vitae
                             odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit.
@@ -127,7 +127,7 @@
                     </blockquote>
                 </li>
                 <li class="reviews_list_item">
-                    <img src="" alt="avatar" class="revies_list_item_avatar">
+                    <img src="https://via.placeholder.com/75" alt="avatar" height="75" class="reviews_list_item_avatar">
                     <blockquote class="reviews_list_item_quote">
                         <p class="reviews_list_item_quote_text">Porro officia cumque sint deleniti nemo facere rem vitae
                             odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit.
@@ -136,7 +136,7 @@
                     </blockquote>
                 </li>
                 <li class="reviews_list_item">
-                    <img src="" alt="avatar" class="revies_list_item_avatar">
+                    <img src="https://via.placeholder.com/75" alt="avatar" height="75" class="reviews_list_item_avatar">
                     <blockquote class="reviews_list_item_quote">
                         <p class="reviews_list_item_quote_text">Porro officia cumque sint deleniti nemo facere rem vitae
                             odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit.
@@ -145,7 +145,7 @@
                     </blockquote>
                 </li>
                 <li class="reviews_list_item">
-                    <img src="" alt="avatar" class="revies_list_item_avatar">
+                    <img src="https://via.placeholder.com/75" alt="avatar" height="75" class="reviews_list_item_avatar">
                     <blockquote class="reviews_list_item_quote">
                         <p class="reviews_list_item_quote_text">Porro officia cumque sint deleniti nemo facere rem vitae
                             odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit.
@@ -154,6 +154,10 @@
                     </blockquote>
                 </li>
             </ul>
+        </section>
+
+        <section class="buy">
+            <h2 class="buy_title">Buy it now</h2>
         </section>
 
     </main>
