--- a/index.html
+++ b/index.html
@@ -156,13 +156,106 @@
             </ul>
         </section>
 
-        <section class="buy">
-            <h2 class="buy_title">Buy it now</h2>
+        <section class="price">
+            <h2 class="price_title">Buy it now</h2>
+            <ul class="price_list">
+                <li class="price_list_item">
+                    <h3 class="price_list_item_title">standart</h3>
+                    <span class="price_list_item_txt">$100</span>
+                    <ol class="price_list_item_price_list">
+                        <li class="price_list_item_price_list_item">Porro officia cumque sint deleniti;</li>
+                        <li class="price_list_item_price_list_item">Тemo facere rem vitae odit;</li>
+                        <li class="price_list_item_price_list_item">Cum odio, iste quia doloribus autem;</li>
+                        <li class="price_list_item_price_list_item">Aperiam nulla ea neque.</li>
+                    </ol>
+                    <button class="btn price_list_item_btn">buy</button>
+                </li>
+                <li class="price_list_item">
+                    <h3 class="price_list_item_title">Premium</h3>
+                    <span class="price_list_item_txt">$150</span>
+                    <ol class="price_list_item_price_list">
+                        <li class="price_list_item_price_list_item">Porro officia cumque sint deleniti;</li>
+                        <li class="price_list_item_price_list_item">Тemo facere rem vitae odit;</li>
+                        <li class="price_list_item_price_list_item">Cum odio, iste quia doloribus autem;</li>
+                        <li class="price_list_item_price_list_item">Aperiam nulla ea neque.</li>
+                        <li class="price_list_item_price_list_item">Porro officia cumque sint deleniti;</li>
+                        <li class="price_list_item_price_list_item">Тemo facere rem vitae odit;</li>
+                        <li class="price_list_item_price_list_item">Cum odio, iste quia doloribus autem;</li>
+                        <li class="price_list_item_price_list_item">Aperiam nulla ea neque.</li>
+                    </ol>
+                    <button class="btn price_list_item_btn">buy</button>
+                </li>
+                <li class="price_list_item">
+                    <h3 class="price_list_item_title">Lux</h3>
+                    <span class="price_list_item_txt">$200</span>
+                    <ol class="price_list_item_price_list">
+                        <li class="price_list_item_price_list_item">Porro officia cumque sint deleniti;</li>
+                        <li class="price_list_item_price_list_item">Тemo facere rem vitae odit;</li>
+                        <li class="price_list_item_price_list_item">Cum odio, iste quia doloribus autem;</li>
+                        <li class="price_list_item_price_list_item">Aperiam nulla ea neque.</li>
+                        <li class="price_list_item_price_list_item">Porro officia cumque sint deleniti;</li>
+                        <li class="price_list_item_price_list_item">Тemo facere rem vitae odit;</li>
+                        <li class="price_list_item_price_list_item">Cum odio, iste quia doloribus autem;</li>
+                        <li class="price_list_item_price_list_item">Aperiam nulla ea neque.</li>
+                        <li class="price_list_item_price_list_item">Porro officia cumque sint deleniti;</li>
+                        <li class="price_list_item_price_list_item">Тemo facere rem vitae odit;</li>
+                        <li class="price_list_item_price_list_item">Cum odio, iste quia doloribus autem;</li>
+                        <li class="price_list_item_price_list_item">Aperiam nulla ea neque.</li>
+                    </ol>
+                    <button class="btn price_list_item_btn">buy</button>
+                </li>
+            </ul>
         </section>
-
     </main>
 
-    <footer>
+    <footer class="footer container">
+        <h2 class="footer_title">Contacts</h2>
+        <div class="footer_wrap">
+            <form action="" class="footer_form">
+                <input type="text" placeholder="Your name:" class="input footer_form_name">
+                <input type="email" placeholder="Your email:" class="input footer_form_email">
+                <textarea name="" id="" placeholder="Your message:" cols="30" rows="10"
+                    class="input footer_form_msg"></textarea>
+                <button class="btn footer_form_btn">send</button>
+            </form>
+            <div class="footer_contacts">
+                <ul class="footer_contacts_list">
+                    <li class="footer_contacts_list_item">
+                        <img src="img/skype_icon.png" height="26" alt="skype" class="footer_contacts_list_item_img">
+                        here_your_login_skype
+                    </li>
+                    <li class="footer_contacts_list_item">
+
+                        <img src="img/icq_icon.png" height="26" alt="icq" class="footer_contacts_list_item_img">
+                        279679659
+                    </li>
+                    <li class="footer_contacts_list_item">
+                        <a href="#">
+                            <img src="img/email_icon.png" height="26" alt="email" class="footer_contacts_list_item_img">
+                        </a>psdhtmlcss@mail.ru</li>
+                    <li class="footer_contacts_list_item">
+                        <img src="img/phone_icon.png" height="26" alt="phone" class="footer_contacts_list_item_img">
+                        80 00 4568 55 55</li>
+                </ul>
+                <div class="footer_contacts_social">
+                    <a href="#" class="footer_contacts_social_link">
+                        <img src="img/socials.png" alt="social" height="42" class="footer_contacts_social_link_img">
+                    </a>
+                    <!-- <ul class="footer_contacts_social_list">
+                        <li class="footer_contacts_social_list_item">
+                            <a href="#" class="footer_contacts_social_link" alt="twitter" height="">
+                                <img src="img/socials.png" alt="social" height="42" class="footer_contacts_social_link_img">
+                            </a>
+                        </li>
+                        <li class="footer_contacts_social_list_item"></li>
+                        <li class="footer_contacts_social_list_item"></li>
+                        <li class="footer_contacts_social_list_item"></li>
+                        <li class="footer_contacts_social_list_item"></li>
+                    </ul> -->
+                </div>
+            </div>
+        </div>
+        <p class="footer_copy">Copyright © 2014 Product name · PSD HTML CSS</p>
     </footer>
 
 </body>
