Socialico font added

--- a/index.html
+++ b/index.html
@@ -238,20 +238,36 @@
                         80 00 4568 55 55</li>
                 </ul>
                 <div class="footer_contacts_social">
-                    <a href="#" class="footer_contacts_social_link">
+                    <!-- <a href="#" class="footer_contacts_social_link">
                         <img src="img/socials.png" alt="social" height="42" class="footer_contacts_social_link_img">
-                    </a>
-                    <!-- <ul class="footer_contacts_social_list">
+                    </a> -->
+                    <ul class="footer_contacts_social_list">
                         <li class="footer_contacts_social_list_item">
                             <a href="#" class="footer_contacts_social_link" alt="twitter" height="">
-                                <img src="img/socials.png" alt="social" height="42" class="footer_contacts_social_link_img">
+                                l
                             </a>
                         </li>
-                        <li class="footer_contacts_social_list_item"></li>
-                        <li class="footer_contacts_social_list_item"></li>
-                        <li class="footer_contacts_social_list_item"></li>
-                        <li class="footer_contacts_social_list_item"></li>
-                    </ul> -->
+                        <li class="footer_contacts_social_list_item">
+                            <a href="#" class="footer_contacts_social_link" alt="twitter" height="">
+                                f
+                            </a>
+                        </li>
+                        <li class="footer_contacts_social_list_item">
+                            <a href="#" class="footer_contacts_social_link" alt="twitter" height="">
+                                i
+                            </a>
+                        </li>
+                        <li class="footer_contacts_social_list_item">
+                            <a href="#" class="footer_contacts_social_link" alt="twitter" height="">
+                                g
+                            </a>
+                        </li>
+                        <li class="footer_contacts_social_list_item">
+                            <a href="#" class="footer_contacts_social_link" alt="twitter" height="">
+                                x
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
