--- a/index.html
+++ b/index.html
@@ -222,48 +222,51 @@
                 <ul class="footer_contacts_list">
                     <li class="footer_contacts_list_item">
                         <img src="img/skype_icon.png" height="26" alt="skype" class="footer_contacts_list_item_img">
-                        here_your_login_skype
+                        <a href="skype:here_your_login_skype" target="_blank"
+                            class="footer_contacts_list_item_link">here_your_login_skype</a>
                     </li>
                     <li class="footer_contacts_list_item">
-
                         <img src="img/icq_icon.png" height="26" alt="icq" class="footer_contacts_list_item_img">
                         279679659
                     </li>
                     <li class="footer_contacts_list_item">
-                        <a href="#">
-                            <img src="img/email_icon.png" height="26" alt="email" class="footer_contacts_list_item_img">
-                        </a>psdhtmlcss@mail.ru</li>
+                        <img src="img/email_icon.png" height="26" alt="email" class="footer_contacts_list_item_img">
+                        <a href="mailto:psdhtmlcss@mail.ru" target="_blank"
+                            class="footer_contacts_list_item_link">psdhtmlcss@mail.ru</a></li>
                     <li class="footer_contacts_list_item">
                         <img src="img/phone_icon.png" height="26" alt="phone" class="footer_contacts_list_item_img">
-                        80 00 4568 55 55</li>
+                        <a href="tel:800045685555" target="_blank" class="footer_contacts_list_item_link">80 00 4568 55
+                            55</a></li>
                 </ul>
                 <div class="footer_contacts_social">
-                    <!-- <a href="#" class="footer_contacts_social_link">
-                        <img src="img/socials.png" alt="social" height="42" class="footer_contacts_social_link_img">
-                    </a> -->
                     <ul class="footer_contacts_social_list">
                         <li class="footer_contacts_social_list_item">
-                            <a href="#" class="footer_contacts_social_link" alt="twitter" height="">
+                            <a href="#" target="_blank" class="footer_contacts_social_list_item_link" alt="twitter"
+                                height="">
                                 l
                             </a>
                         </li>
                         <li class="footer_contacts_social_list_item">
-                            <a href="#" class="footer_contacts_social_link" alt="twitter" height="">
+                            <a href="#" target="_blank" class="footer_contacts_social_list_item_link" alt="twitter"
+                                height="">
                                 f
                             </a>
                         </li>
                         <li class="footer_contacts_social_list_item">
-                            <a href="#" class="footer_contacts_social_link" alt="twitter" height="">
+                            <a href="#" target="_blank" class="footer_contacts_social_list_item_link" alt="twitter"
+                                height="">
                                 i
                             </a>
                         </li>
                         <li class="footer_contacts_social_list_item">
-                            <a href="#" class="footer_contacts_social_link" alt="twitter" height="">
+                            <a href="#" target="_blank" class="footer_contacts_social_list_item_link" alt="twitter"
+                                height="">
                                 g
                             </a>
                         </li>
                         <li class="footer_contacts_social_list_item">
-                            <a href="#" class="footer_contacts_social_link" alt="twitter" height="">
+                            <a href="#" target="_blank" class="footer_contacts_social_list_item_link" alt="twitter"
+                                height="">
                                 x
                             </a>
                         </li>
