--- a/index.html
+++ b/index.html
@@ -36,7 +36,16 @@
                     aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis
                     dolor.</p>
             </div>
-            <img class='about_clip' src="https://via.placeholder.com/430x245" height="245" alt="about image">
+            <!-- <img class='about_clip' src="https://via.placeholder.com/430x245" height="245" alt="about image"> -->
+            <video class='about_clip' width="430" height="245" controls="controls"
+                poster="https://sun9-20.userapi.com/c845020/v845020221/1dd6ec/JWowD1Jb8rA.jpg">
+                <source
+                    src="https://vkvd188.mycdn.me/?expires=1602822873088&srcIp=94.181.152.152&srcAg=CHROME_YA&ms=185.226.53.188&type=3&sig=e2hG-XQ85uQ&ct=0&urls=185.226.52.146&clientType=13&appId=512000384397&id=812183325271" />
+                Элемент video не поддерживается вашим браузером.
+                <a
+                    href="https://vkvd188.mycdn.me/?expires=1602822873088&srcIp=94.181.152.152&srcAg=CHROME_YA&ms=185.226.53.188&type=3&sig=e2hG-XQ85uQ&ct=0&urls=185.226.52.146&clientType=13&appId=512000384397&id=812183325271">Скачайте
+                    видео</a>.
+            </video>
         </section>
 
         <section class="dignity_product container">
