All warnings and errors fixed

--- a/index.html
+++ b/index.html
@@ -220,10 +220,10 @@
     <footer class="footer container">
         <h2 class="footer_title">Contacts</h2>
         <div class="footer_wrap">
-            <form action="" class="footer_form">
+            <form action="POST" class="footer_form">
                 <input type="text" placeholder="Your name:" class="input footer_form_name">
                 <input type="email" placeholder="Your email:" class="input footer_form_email">
-                <textarea name="" id="" placeholder="Your message:" cols="30" rows="10"
+                <textarea name="message" id="message" placeholder="Your message:" cols="30" rows="10"
                     class="input footer_form_msg"></textarea>
                 <button class="btn footer_form_btn">send</button>
             </form>
@@ -250,32 +250,27 @@
                 <div class="footer_contacts_social">
                     <ul class="footer_contacts_social_list">
                         <li class="footer_contacts_social_list_item">
-                            <a href="#" target="_blank" class="footer_contacts_social_list_item_link" alt="twitter"
-                                height="">
+                            <a href="#" target="_blank" class="footer_contacts_social_list_item_link">
                                 l
                             </a>
                         </li>
                         <li class="footer_contacts_social_list_item">
-                            <a href="#" target="_blank" class="footer_contacts_social_list_item_link" alt="twitter"
-                                height="">
+                            <a href="#" target="_blank" class="footer_contacts_social_list_item_link">
                                 f
                             </a>
                         </li>
                         <li class="footer_contacts_social_list_item">
-                            <a href="#" target="_blank" class="footer_contacts_social_list_item_link" alt="twitter"
-                                height="">
+                            <a href="#" target="_blank" class="footer_contacts_social_list_item_link">
                                 i
                             </a>
                         </li>
                         <li class="footer_contacts_social_list_item">
-                            <a href="#" target="_blank" class="footer_contacts_social_list_item_link" alt="twitter"
-                                height="">
+                            <a href="#" target="_blank" class="footer_contacts_social_list_item_link">
                                 g
                             </a>
                         </li>
                         <li class="footer_contacts_social_list_item">
-                            <a href="#" target="_blank" class="footer_contacts_social_list_item_link" alt="twitter"
-                                height="">
+                            <a href="#" target="_blank" class="footer_contacts_social_list_item_link">
                                 x
                             </a>
                         </li>
@@ -284,6 +279,8 @@
             </div>
         </div>
         <p class="footer_copy">Copyright © 2014 Product name · PSD HTML CSS</p>
+
+    </footer>
 
 </body>
 
